--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,12 @@ h1{
 	background-color: #e30613;
 	color: white;
 	cursor: pointer;
+	box-shadow: 2px 2px 10px black;
+	transition: box-shadow 0.5s ease;
+}
+
+.btnContainer button:hover{
+	box-shadow: 4px 4px 10px black;	
 }
 
 .result{
@@ -128,4 +134,69 @@ h1{
 .error{
 	color: red;
 	font-weight: 900;
+}
+
+#modelContainer{
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100vh;
+	display: none;
+}
+
+#modelContainer.active{
+	display: flex;
+}
+
+#model{
+	background-color: white;
+	width: 90%;
+	max-height: 90vh;
+	padding: 10px;
+	overflow-y: scroll;
+}
+
+#model #close{
+	position: absolute;	
+	right: 0;
+	top: 0;
+	width: 50px;
+	height: 50px;
+	color: black;
+	font-weight: 900;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: white;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: #e30613;
+	color: white;
+	transform: translate(-50%, 0);
+}
+
+#model h2{
+	padding: 10px 0;
+}
+
+#model .taskDescr{
+	padding: 0 10px;	
+}
+
+#model .taskDescr ul{
+	padding-left: 40px;
+	padding-top: 10px;
+}
+
+#model .taskDescr h3{
+	padding-top: 10px;
+}
+
+#model .taskDescr li p{
+	display: inline-block;
 }
